# rcsim

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  rcsim_DESIGN_v1.3.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: CALIBRATION.md  MIGRATION_v1.2_to_v1.3.md  PAPER.md  PHASE_0_2_PLAN.md  SPEC_AMBIGUOUS_RESOLUTIONS.md
include/rcsim/action/: action.hpp  action_wire.hpp  apply_with_fizzle.hpp  effect.hpp  queue.hpp  validate_epistemic.hpp
include/rcsim/core/: canonicalize.hpp  fixed_point.hpp  hash.hpp  integer_network_flow.hpp  rng.hpp  tick.hpp  transcendentals.hpp  transcendentals_polynomial.hpp  tree_reduce.hpp
include/rcsim/dynamics/: algebraics.hpp  coupling.hpp  integrator.hpp  ode_system.hpp
include/rcsim/geo/: adjacency.hpp  geojson.hpp  partition.hpp
include/rcsim/io/: ipc_multisubscriber.hpp  parquet_rollup.hpp  parquet_sink.hpp  replay.hpp  scenario_yaml.hpp  sync_log.hpp
include/rcsim/observer/: asymmetric_telemetry.hpp  attribution.hpp  cascade_stability.hpp  distortion.hpp  measurement.hpp  operator_policies.hpp
include/rcsim/political/: clock.hpp  endogenous_transitions.hpp  regime.hpp  response_latency.hpp
include/rcsim/state/: canonicalization_state.hpp  global_state.hpp  pending.hpp  principal.hpp  territory.hpp  world_state.hpp
include/rcsim/testbed/: harness.hpp  principal_policy.hpp  scripted_heuristic_policy.hpp  sweep.hpp
scenarios/: grid_150.yaml  mean_field_1.yaml  three_territory.yaml
scenarios/data/: grid_150.geojson
src/action/: action.cpp  action_wire.cpp  apply_with_fizzle.cpp  effect.cpp  queue.cpp  validate_epistemic.cpp
src/core/: canonicalize.cpp  fixed_point.cpp  hash.cpp  integer_network_flow.cpp  rng.cpp  tick.cpp  transcendentals.cpp  transcendentals_polynomial.cpp  tree_reduce.cpp
src/dynamics/: algebraics.cpp  coupling.cpp  integrator.cpp  ode_system.cpp
src/geo/: adjacency.cpp  geojson.cpp  partition.cpp
src/io/: ipc_multisubscriber.cpp  parquet_rollup.cpp  parquet_sink.cpp  replay.cpp  scenario_yaml.cpp  sync_log.cpp
src/observer/: asymmetric_telemetry.cpp  attribution.cpp  cascade_stability.cpp  distortion.cpp  measurement.cpp  operator_policies.cpp
src/political/: clock.cpp  endogenous_transitions.cpp  regime.cpp  response_latency.cpp
src/state/: canonicalization_state.cpp  global_state.cpp  pending.cpp  principal.cpp  territory.cpp  world_state.cpp
src/testbed/: harness.cpp  principal_policy.cpp  scripted_heuristic_policy.cpp  sweep.cpp
tests/: CMakeLists.txt
tests/determinism/: 01_identical_rerun.cpp  02_checkpoint_replay.cpp  03_cross_platform_hash.cpp  04_action_order_invariance.cpp  05_fpu_mode_robustness.cpp  06_parallel_testbed_determinism.cpp  07_pinned_sleef_variant.cpp  08_action_wire_roundtrip.cpp  09_attribution_detection_determinism.cpp  10_signed_zero_canonicalization.cpp  11_nan_inf_trap.cpp  12_kahan_residual_conservation.cpp  13_integer_network_flow_determinism.cpp  14_fizzle_no_ground_truth_leak.cpp  15_bisection_absent.cpp
tests/property/: A_monotone.cpp  D_monotone.cpp  Q_nonneg_monotone_gates.cpp  action_log_replayability.cpp  attribution_gradient_smoothness.cpp  conservation.cpp  distortion_S_bound.cpp  distortion_cascade_bounded.cpp  epistemic_validation_no_leak.cpp  hash_stability.cpp  tree_reduce_commutativity.cpp
tests/retrodiction/: 2008_financial_crisis.cpp  2020_covid_shock.cpp  2022_2025_ai_capex.cpp  2026q1_venezuela.cpp  2026q2_hormuz.cpp  ussr_1989_1991.cpp  weimar_1929_1933.cpp
tests/unit/: grid_150_basin.cpp  rk4_smoke.cpp
tools/: rcsim_replay.cpp  rcsim_run.cpp  rcsim_testbed.cpp
